v4/README.md
# Pré-requisitos - [Terraform - AWS - Zabbix v4]

<h3> Obs: O arquivo <b>"variaveis-config.tf"</b> e o lugar para vc configurar o que deseja para sua infra.<h3>

1. Uma conta ativa da AWS.

2. AWS Command Line Interface (AWS CLI) instalada e configurada com as permissões necessárias. Para obter mais informações sobre isso, consulte <a href="https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html" rel="nofollow" _istranslated="1">esta documentação</a>.</li>

3. Terraform instalado e configurado. Para obter mais informações sobre isso, consulte <a href="https://learn.hashicorp.com/tutorials/terraform/install-cli" rel="nofollow" _istranslated="1">esta documentação</a>.

<h3>Colaboradores</h3>

- Eduardo C.
- Gerlucio Moura

<h3>Laboratório - Zabbix e RDS e Load Balance</h3>

1 - Criar um bucket na região da virginia Exemplo ""terraform-state-seu-projeto" e depois substituir no arquivo <b>"main.tf"</b>

 - A criaçao do mesmo pode ser no painel ou via cli. O motivo da criação e gravar o estado da infra no bucket.

2 - No arquivo <b>"variaveis-config.tf"</b> agora existe um parâmetro com o nome <b>"criar_rds"</b>

 - Quando definido <b>true</b> ira criar o recurso normalmente. 
 - Caso contrario defina <b>false</b> para não criar o recurso de rds.
 
3 - No arquivo <b>"variaveis-config.tf"</b> agora existe um parâmetro com o nome <b>"volume_size"</b>

 - Este se refere ao tamanho do disco que será criado na instancia.

4 - No arquivo <b>"variaveis-config.tf"</b> agora existe um parâmetro com o nome <b>"criar_alb"</b>

 - Quando definido <b>true</b> ira criar o recurso normalmente. 
 - Caso contrario defina <b>false</b> para não criar o recurso de load balance. {Pendente falta alguns ajustes}
 
<h3>Evolução do Projeto</h3>

<h4>Adicionado load balance - 06/03/2023</h4>

**NOTA**: Os recursos criados podem gerar em custos em sua conta da AWS. Considere excluir os recursos criados assim que os testes forem concluídos. Para obter mais informações, consulte [Definição de preço da AWS](https://aws.amazon.com/pricing/).

<h3>Verifique se sua conta ainda se encontra no free-tear.</h3>

terraform destroy --auto-approve
